--- a/chessKnight/Base.lproj/Main.storyboard
+++ b/chessKnight/Base.lproj/Main.storyboard
@@ -1,24 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VeN-nm-ewV">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="Xm0-gv-obm">
+            <objects>
+                <navigationController id="VeN-nm-ewV" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XUM-rK-egA">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xvz-Hg-gji"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Wd-QZ-1Sc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1278" y="84"/>
+        </scene>
+        <!--Chess playground-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="chessKnight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCJ-aj-TYR" customClass="ChessBoardUIView" customModule="chessKnight" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="414" height="414"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="FCJ-aj-TYR" secondAttribute="height" multiplier="1:1" id="NzK-l6-3rY"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ipf-Hf-hKg">
+                                <rect key="frame" x="120" y="513" width="80" height="45"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="84Y-Hn-xQO"/>
+                                    <constraint firstAttribute="width" constant="80" id="WXm-3L-jnR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="onStartButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vdg-BJ-Q8u"/>
+                                </connections>
+                            </button>
+                            <view alpha="0.34999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j65-Hi-svy">
+                                <rect key="frame" x="206" y="506" width="2" height="55"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="2" id="O7a-yo-D5j"/>
+                                    <constraint firstAttribute="height" constant="55" id="ilI-F8-bxb"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eqs-Xk-NVG">
+                                <rect key="frame" x="214" y="513" width="70" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="2OQ-08-tS4"/>
+                                    <constraint firstAttribute="width" constant="70" id="WxU-Ef-4rw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                <state key="normal" title="CLEAR"/>
+                                <connections>
+                                    <action selector="onClearButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DoU-KZ-Ukr"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="FCJ-aj-TYR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7Wj-vk-WSW"/>
+                            <constraint firstItem="Ipf-Hf-hKg" firstAttribute="top" secondItem="FCJ-aj-TYR" secondAttribute="bottom" constant="11" id="Dr6-sr-T1h"/>
+                            <constraint firstItem="j65-Hi-svy" firstAttribute="leading" secondItem="Ipf-Hf-hKg" secondAttribute="trailing" constant="6" id="QQC-aT-ZZ0"/>
+                            <constraint firstItem="Eqs-Xk-NVG" firstAttribute="top" secondItem="FCJ-aj-TYR" secondAttribute="bottom" constant="11" id="UAN-Ah-yxz"/>
+                            <constraint firstItem="FCJ-aj-TYR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="YPf-Ft-Co4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FCJ-aj-TYR" secondAttribute="trailing" id="ZIo-3C-ljo"/>
+                            <constraint firstItem="j65-Hi-svy" firstAttribute="top" secondItem="FCJ-aj-TYR" secondAttribute="bottom" constant="4" id="gLb-gA-BdO"/>
+                            <constraint firstItem="j65-Hi-svy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="puI-Hv-mEt"/>
+                            <constraint firstItem="Eqs-Xk-NVG" firstAttribute="leading" secondItem="j65-Hi-svy" secondAttribute="trailing" constant="6" id="shF-Sp-F4m"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Chess playground" id="onc-fh-oMt"/>
+                    <connections>
+                        <outlet property="chessBoardUIView" destination="FCJ-aj-TYR" id="ylc-6U-4xF"/>
+                        <outlet property="clearButton" destination="Eqs-Xk-NVG" id="8bw-iJ-c0F"/>
+                        <outlet property="startButton" destination="Ipf-Hf-hKg" id="tYq-N0-azI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-468.11594202898556" y="83.705357142857139"/>
+        </scene>
+        <!--Paths Display View Controller-->
+        <scene sceneID="iQY-9b-wdj">
+            <objects>
+                <viewController storyboardIdentifier="pathDisplayVC" id="8SG-5s-AMF" customClass="PathsDisplayViewController" customModule="chessKnight" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Eq0-6Y-sRT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The knight found his way home 🎉" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zUH-D6-5bY">
+                                <rect key="frame" x="0.0" y="60" width="414" height="18.5"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="HQg-LP-Jhb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zUH-D6-5bY" firstAttribute="top" secondItem="HQg-LP-Jhb" secondAttribute="top" constant="16" id="Dmn-dh-iYa"/>
+                            <constraint firstItem="HQg-LP-Jhb" firstAttribute="trailing" secondItem="zUH-D6-5bY" secondAttribute="trailing" id="Qs6-po-Sir"/>
+                            <constraint firstItem="zUH-D6-5bY" firstAttribute="leading" secondItem="HQg-LP-Jhb" secondAttribute="leading" id="xwi-Ig-2KM"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="YvK-VW-29p"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mvn-EL-w89" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="365" y="84"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
